--- a/er/9-outcomes.adoc
+++ b/er/9-outcomes.adoc
@@ -1,20 +1,20 @@
 [[Experiment_Outcomes_Summary]]
 == Summary of Experiment and Analysis of Outcomes
-As described previously, the ELFIE was intended to test existing OGC and W3C standards with the goal of establishing a best practice for expressing and exposing links between and among environmental domain and sampling features. The project sought to test existing solutions to linking data on the web with a "just enough" semantic annotation approach that would be approachable by developers and adoptable existing systems. Many use cases were discussed and a few of them were selected for experimental implementation.
+As described previously, the ELFIE was intended to test existing OGC and W3C standards with the goal of establishing a best practice for expressing and exposing links between and among environmental domain and sampling features. The project sought to test existing solutions to linking data on the web with a "just enough" semantic annotation approach that would be approachable by developers and be adoptable using existing systems. Many use cases were discussed and a few of them were selected for experimental implementation.
 
-All experimental implementations are summarized on the https://opengeospatial.github.io/ELFIE/[ELFIE demo pages.] The collection of experiments show that existing practices for encoding linked data can be used to satisfy the important environmental linked features use cases considered by the ELFIE. In cases where features and related information were already published as linked data or had well established web services, these data and/or service generated representations were easy to incorporate and use. Many of the core linked data relations used for search engine optimization were found to be suited to typical environmental linked feature use cases.
+All experimental implementations are summarized on the https://opengeospatial.github.io/ELFIE/[ELFIE demo pages.] The collection of experiments show that existing practices for encoding linked data can be used to satisfy the environmental linked features use cases considered by the ELFIE. In cases where features and related information were already published as linked data or had well established web services, these data and/or service-generated representations were easy to incorporate and use. Many of the core linked data relations used for search engine optimization were found to be suited to typical environmental linked feature use cases.
 
-Note that in the JSON-LD files provided on ELFIE github, URIs are relative to the file locations on opengeospatial.github.io for linked data demo purposes. This choice helped save time for the IE as it avoided each participant to set up the corresponding mechanics within its own data infrastructure. In production situations, each data provider will end-up exposing those file using their own URI policy.
+Note that in the JSON-LD files provided on the ELFIE web pages, URIs are relative to the file locations on opengeospatial.github.io for linked data demo purposes. This choice helped save time for the IE as it avoided each participant to set up the corresponding mechanics within its own data infrastructure. In production situations, each data provider will end-up exposing those files using their own URI policy.
 
 === Watershed Data Index Use Case Example
 
-While additional content is available on the ELFIE demo pages, the watershed data index use case, that was described in greater detail in previous sections, is described in greater detail here. As shown in Box 4 <<8-contexts.adoc#contexts-in-context-exemple-on-the-watershed-data-index-use-case,here>>, this use case has a primary entry point JSON-LD document for a single HY_Catchment feature that uses the elf.jsonld and hyf.jsonld contexts. As described in this <<6-usecases.adoc#watershed-data-index-use-case-in-depth,section>>, the HY_Catchment is thought of as an unrealized feature that has multiple features that “realize” one of the ways we conceptualize catchments. The JSON-LD documents for these are shown in the source code box below.
+While additional content is available on the https://opengeospatial.github.io/ELFIE/[ELFIE demo pages], the watershed data index use case, that was described in greater detail in previous sections, is described in greater detail here. As shown in the JSON-LD example <<huc12obs_example,here>>, this use case has a primary entry point JSON-LD document for a single HY_Catchment feature that uses the elf.jsonld and hyf.jsonld contexts. As described in this <<_watershed_data_index_use_case_in_depth,section>>, the HY_Catchment is thought of as an unrealized feature that has multiple features that “realize” one of the ways we conceptualize catchments. The JSON-LD documents for these are shown in the source code box below.
 
 Items to note below:
 
-* Only two contexts are shown. While other contexts were used to some extent in ELFIE, this use case was kept purposefully simple and only demonstrates elf.jsonld and hyf.jsonld. See <<elf-network-context>> and <<elf-base-context>> for these context documents.
+* Only two contexts are shown. While other contexts were used to some extent in ELFIE, this use case was kept purposefully simple and only demonstrates elf.jsonld and hyf.jsonld. See <<elf-base-context>> and <<hyf-context>> for these context documents.
 * Several geospatial preview geometry options are shown. As described elsewhere, use of the schema:geoshape, schema:geoCoordinates, gsp:hasGeometry, and/or a link to a geojson document are all possible and have potential value.
-* HY_Features relations are draft and will not resolve. Work to publish HY_Features feature types and associations is underway at the time of writing.
+* HY_Features relations are draft URIs and will not resolve. Work to publish HY_Features feature types and associations is underway at the time of writing.
 * Much more information could be included in the hydrometricNetwork document or at the feature page of the individual hydrometricFeatures. Those details were not implemented for this demo.
 * The catchment example shows three different representations of the abstract Catchment, each showing a different realization of the catchment. First, it is described as a HY_HydrographicNetwork, which is a network of waterbodies. Second, as a HY_CatchmentDivide, which is defined as the topographic divide around a catchment; and third as a HY_HydrometricNetwork, which lists all the monitoring stations that are found in this catchment.
 
@@ -116,12 +116,12 @@ Items to note below:
 }
 ----
 
-<1> The two contexts used here
+<1> The two contexts used are here
 <2> The identifier for this hydrograhic network. If you follow the link, you will see the full example including geospatial property details.
 <3> The is “HY_HydrographicNetwork”. The link does not resolve yet because HY_Features have not been made available yet on the OGC server. A HY_HydrographicNetwork is a collection of waterbody features that drain to a catchment outlet.
 <4> The HY_HydrographicNetwork realizes a catchment describing it with as a network of lines representing waterbodies. Each realization of HY_Catchment uses both “schema:geo” and “gsp:hasGeometry” to provide both simplified representations that describe the location of the HY_Catchment  as point or surrounding polygon and a more detailed representation respectively.
-<5> The second part describes the catchment as a HY_CatchmentDivide. Notice that the geometry types for the "schema:GeoShape" and the "gsp:Geometry" are polygonal. However "schema:GeoShape" only allows an envelope while "gsp:Geometry" can handle multipolygons and other more complex geometries.
-<6> The third part describes the catchment as a Hydrometric_Network. Here, the Network_Stations are of primary interest. The list of stations is truncated here to improve readability, in reality, there are many more stations located in this catchment.
+<5> The second JSON document describes the catchment as a HY_CatchmentDivide. Notice that the geometry types for the "schema:GeoShape" and the "gsp:Geometry" are polygonal. However "schema:GeoShape" only allows an envelope while "gsp:Geometry" can handle multipolygons and other more complex geometries.
+<6> The third JSON document describes the catchment as a Hydrometric_Network. Here, the Network_Stations are of primary interest. The list of stations is truncated here to improve readability, in reality, there are many more stations located in this catchment.
 
 === Surface-ground water networks interaction Use Case Example
 
