--- a/er/9-outcomes.adoc
+++ b/er/9-outcomes.adoc
@@ -124,23 +124,21 @@ Items to note below:
 <6> The third JSON document describes the catchment as a Hydrometric_Network. Here, the Network_Stations are of primary interest. The list of stations is truncated here to improve readability, in reality, there are many more stations located in this catchment.
 
 === Surface-ground water networks interaction Use Case Example
-While additional content is available on the ELFIE demo pages, experience learnt from the Surface-ground water networks interaction use case, that was described in greater detail in previous sections, is provided here.
+While additional content is available on the ELFIE demo pages, experience gained from the Surface-ground water networks interaction use case, that was described in greater detail in previous sections, is provided here.
 
 [#img_surface_ground_water_interaction,reftext='{figure-caption} {counter:figure-num}']
-.Screenshot3 of Surface-ground water networks interaction Demo.
+.Screenshot of Surface-ground water networks interaction Demo.
 image::https://opengeospatial.github.io/ELFIE/images/surface-ground_waterinteraction_screenshot3.png[width=450,align="center"]
 
-Developping a generic client (here https://github.com/BRGM/BLiv[BLiV.]) in parallel to populating JSON-LD files helped on various points:
+Developing a generic client (here https://github.com/BRGM/BLiv[BLiV.]) in parallel to populating JSON-LD files helped in various ways:
 
-* It triggered the geometry related discussion mentionned several times in the ER
-* It led the group to be more cautious and, in addition to validate JSON-LD payload, also validate in JSON-LD playground the contexts. Indeed, the client using the payload triggered various remarks on the contexts themselves
-* Using the @id, @type, name pattern when linking to another domain object proves really useful to propose something dedicated interaction (map, timeseries graph, etc...) in a GUI
-* Keeping the client as generic as possible, allows to vizualize not only Surface-ground water networks interaction Use Case related JSON-LD files but also, those from the other Use Cases.
-* Eventually, such approach proves really powerful to demonstrate domain colleagues what linked-data is on their own dataset and how it helps relate to other information silos without having to revamp them
-
-
+* It triggered the geometry discussion mentioned several times in the ER
+* It led the group to be more cautious and, in addition to validate JSON-LD payload, also validate in JSON-LD playground the contexts. The client's use of JSON-LD documents triggered various remarks on the contexts themselves.
+* Using the @id, @type, name pattern when linking to another domain object proves useful to chose an interaction type (map, timeseries graph, etc...) in a GUI.
+* Keeping the client as generic as possible, allows vizualization of not only Surface-ground water networks interaction Use Case related JSON-LD files but also, those from the other Use Cases.
+* Such an approach should proves valuable for demonstration of what linked-data is using domain-scientists own datasets as well as how it can help relate to other domains without having to modify source data.
 
 === Future Work
-The experiments exposed several issues with existing and new technologies that need to be addressed to realize the full potential of the core linked data encoding technologies tested. The issue of representation of a preview geometry for a feature should be addressed and seems to be a tractable problem that could lead to significant benefits. Another tractable and important issue is creation of ontologies for domain features. As of the completion of the ELFIE, this work was already being undertaken for existing domain models where a UML to OWL conversion is possible. This was the topic of an ad hoc meeting during the OGC TC meeting in March 2018 in Orléans. The main outcomes are summarized in Annex A: <<annex-a.adoc#,ontology_from_uml>>. Other domain models, such as flood impact features, need to be created and or vetted by a community.
+The experiments exposed several issues with existing and new technologies that need to be addressed to realize the full potential of the core linked data encoding technologies tested. The issue of representation of a preview geometry for a feature should be addressed and seems to be a tractable problem that could lead to significant benefits. Another tractable and important issue is creation of ontologies for domain features. As of the completion of the ELFIE, this work was already being undertaken for existing domain models where a UML to OWL conversion is possible. This was the topic of an ad hoc meeting during the OGC TC meeting in March 2018 in Orléans, France. The main outcomes are summarized in Annex A: <<ontology_from_uml>>. Other domain models, such as flood impact features, need to be created and or vetted by a community.
 
-There were also several issues highlighted by the ELFIE that were deemed out of scope and purposefully left for future efforts. The foundational issue in this category is the "landing page" or "default representation" problem. That is, how should we handle the case where a dereferenceable URI meant to identify a real world entity with multiple digital representations. There are many related issues largely related to the network architecture and expected behavior when dereferencing URIs. These were generally out of scope for the ELFIE but need to be addressed to achieve interoperability and include: URI structure, use of non-information URIs with WFS and other services, strategies for managing collections of potentially temporary linked data among many data providers. Use of the domain feature ontologies declared in the JSON-LD contexts was also out of scope. That is, JSON-LD files produced by ELFIE were not ingested by reasoning software. The extra vocabulary source are not yet taken into account by major search engines crawlers that focus mainly on the schema.org ontology.
+There were also several issues highlighted by the ELFIE that were deemed out of scope and purposefully left for future efforts. The foundational issue in this category is the "landing page" or "default representation" problem. That is, how should we handle the case where a dereferenceable URI is meant to identify a real world entity with multiple digital representations. There are many related issues related to the network architecture and expected behavior when dereferencing URIs. These were generally out of scope for the ELFIE but need to be addressed to achieve interoperability and include: URI structure, use of non-information URIs with WFS and other services, and strategies for managing collections of potentially temporary linked data among many data providers. Use of the domain feature ontologies declared in the JSON-LD contexts was also out of scope. That is, JSON-LD files produced by ELFIE were not ingested by reasoning software. The extra vocabulary source are not yet taken into account by major search engines crawlers that focus mainly on the schema.org ontology.
